# knowledge-api

./: .env.example  .gitignore  Makefile  README copy.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  host.json  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
HttpTrigger1/: function.json
app/: main.py
app/domain/entities/: dataset.py  document.py  knowledge.py
app/domain/repositories/: dataset_repository.py  document_repository.py  knowledge_repository.py
app/infrastructure/database/: connection.py
app/infrastructure/repositories/: dataset_repository_impl.py  document_repository_impl.py  knowledge_repository_impl.py
app/interfaces/schemas/: base.py  dataset.py  document.py  knowledge.py
app/usecases/datasets/: create_dataset.py  delete_dataset.py  get_dataset.py  list_datasets.py  update_dataset.py
app/usecases/documents/: create_document.py  delete_document.py  get_document.py  list_documents.py  update_document.py
app/usecases/knowledges/: create_knowledge.py  delete_knowledge.py  (+3 more)
config/: logging_config.yml
docker/app/: Dockerfile  Dockerfile.prod  Dockerfile.webapp
migrations/: env.py
migrations/versions/: 1a2b3c4d5e6f_rename_and_remove_columns_in_knowledges.py  3c777ad8ef0c_add_is_active_column_to_documents_table.py  dab2d82c919c_make_columns_unicode_for_japanese_.py  f3dabb3f5bd7_add_is_active_column_to_datasets_table.py
scripts/: build.sh  set_appservice_env.sh  switch_azure_subscription.sh
terraform/: .terraform.lock.hcl  Makefile  make.tf
tests/: conftest.py
(+23 files in other folders)
